@@ -1,3 +1,10 @@
+2003-09-14  Tor Lillqvist  <tml@iki.fi>
+
+	* gdk/win32/gdkwindow-win32.c (show_window_internal): Remove
+	special-case code for WS_EX_TRANSPARENT (GDK_INPUT_ONLY) windows,
+	the usefulness of which was already in doubt. Removing it fixes
+	bugs #118575 and #121851.
+
 Fri Sep 12 16:32:53 2003  Jonathan Blandford  <jrb@redhat.com>
 
 	Merge from stable.
